<resources>
    <string name="Fixed">Fixed</string>
    <string name="Import">Import</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_back_to_first_level">Close setting controls</string>
    <string name="accessibility_camera_picker">Front and back camera switch</string>
    <string name="accessibility_decrement">Decrease %1$s</string>
    <string name="accessibility_increment">Increase %1$s</string>
    <string name="accessibility_mode_picker">Camera, video, or panorama selector</string>
    <string name="accessibility_pause_video">Pause video</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_reload_video">Reload video</string>
    <string name="accessibility_review_thumbnail">Most recent photo</string>
    <string name="accessibility_second_level_indicators">More setting controls</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <string name="accessibility_zoom_control">Zoom control</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_favorites">Add to Favorites</string>
    <string name="add_image_to_group_album">%1$d photo(s) added to the album</string>
    <string name="add_image_video_to_group_album">%1$d item(s) added to the album</string>
    <string name="add_to_favo_succ">Successfully added to Favorites.</string>
    <string name="add_to_group_album">Add to Album %1s</string>
    <string name="add_to_privacy_suucess">The file has been added to the private album</string>
    <string name="add_to_private">Add to private album</string>
    <string name="add_to_private_fail">Failed to add to private album</string>
    <string name="add_video_to_group_album">%1$d video(s) added to the album</string>
    <string name="album_add_error_message">%1$d characters maximum</string>
    <string name="album_add_title">New Album</string>
    <string name="album_add_to_folder">Add to</string>
    <string name="album_is_adding_to_group">Adding to album ...</string>
    <string name="album_is_removing_from_group">Removing from the album ...</string>
    <string name="album_more_title">Others</string>
    <string name="album_move_to_more">"Move to\" Other  "</string>
    <string name="album_new_folder">Creating a new album</string>
    <string name="album_new_folder_nextstep">Next</string>
    <string name="album_please_select_group">This is a local folder, please select an album.</string>
    <string name="album_remove">Remove</string>
    <string name="album_remove_from_more">"Move from\" Other  "</string>
    <string name="album_set_add_group_hint">New Album Title</string>
    <string name="album_set_add_group_invalidate_toast">Space and special characters such as :*?\"&lt;>|/. are not supported for the name of new albums.</string>
    <string name="album_set_add_group_toast">"Names can’t contain '/',please use alphabet or number."</string>
    <string name="albums">Albums</string>
    <string name="albumset_rename">Rename</string>
    <string name="albumset_rename_hint">Please enter a new name</string>
    <string name="all_photo_to_gallery">All Photos</string>
    <string name="all_video_to_gallery">All Videos</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Gallery</string>
    <string name="apply_effect">Apply</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="appwidget_title">Photo Gallery</string>
    <string name="aspect">Aspect</string>
    <string name="aspect16to9_effect">16:9</string>
    <string name="aspect1to1_effect">1:1</string>
    <string name="aspect3to4_effect">3:4</string>
    <string name="aspect4to3_effect">4:3</string>
    <string name="aspect5to7_effect">5:7</string>
    <string name="aspect7to5_effect">7:5</string>
    <string name="aspect9to16_effect">9:16</string>
    <string name="aspectNone_effect">None</string>
    <string name="aspectOriginal_effect">@string/original</string>
    <string name="auto">Auto</string>
    <string name="back">Return</string>
    <string name="back_button_content_description">back</string>
    <string name="back_button_label">Back</string>
    <string name="bg_replacement_message">"Set your device down.
Step out of view for a moment."</string>
    <string name="blur_level">Blur Level</string>
    <string name="borders">Borders</string>
    <string name="bwfilter">BW Filter</string>
    <string name="caching_label">Caching…</string>
    <string name="camera_label">Camera</string>
    <string name="camera_mode_hdr">HDR</string>
    <string name="camera_mode_hdr_ten">HDR10+</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="canel_selectall">Uncheck All</string>
    <string name="cannot_edit_original">Cannot edit original</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="caption_input_hint">enter text</string>
    <string name="circle_menu_item_image">circle menu item icon</string>
    <string name="click_import">Touch here to import</string>
    <string name="close">Close</string>
    <string name="cloud_auto_sync_setting_summary">Turn on，auto sync on WiFi only</string>
    <string name="cloud_auto_sync_setting_title">Automatically sync</string>
    <string name="cloud_autosync_off_download_original">"Auto sync turned off，won't download original photo"</string>
    <string name="cloud_backup">On</string>
    <string name="cloud_download_original">Download original photo</string>
    <string name="cloud_download_original_video">Download the video</string>
    <string name="cloud_downloading_original">Downloading original image</string>
    <string name="cloud_downloading_original_video">Downloading the video</string>
    <string name="cloud_duplicate_name_album">Duplicate name album already exists.</string>
    <string name="cloud_gallery_setting">Settings</string>
    <string name="cloud_loading_finished">Uploaded Just Now</string>
    <string name="cloud_loading_items">loading Cloud photos</string>
    <string name="cloud_loading_n_items">loading Cloud photos %1$d</string>
    <string name="cloud_no_local_space_download_original">Your phone is low on space，free up phone space</string>
    <string name="cloud_no_space_summary">Insufficient Cloud storage, please upgrade</string>
    <string name="cloud_no_space_title">Insufficient Cloud storage</string>
    <string name="cloud_no_space_title1">"Insufficient cloud storage,  "</string>
    <string name="cloud_no_space_title2">UPGRADE</string>
    <string name="cloud_not_in_wlan_download_original">Cannot download original photo without Wi-Fi。”</string>
    <string name="cloud_select_autosync_album">Select the albums on your phone that you want to sync</string>
    <string name="cloud_select_move_way">Copy or move</string>
    <string name="cloud_sync_on_summary">Sync to the cloud，so you can access them on any of your device</string>
    <string name="cloud_sync_on_title">Automatically sync Photo and Video to the cloud</string>
    <string name="cloud_title">cloud</string>
    <string name="cloud_unable_to_privacy">Please download the original image first</string>
    <string name="cloud_uploading_file">Updating</string>
    <string name="cloud_uploading_finished">Uploaded Complete</string>
    <string name="cloud_uploading_n_file">Updating %1$d</string>
    <string name="cloud_wlan_setting_check">Auto sync on WiFi or mobile data，turn off？</string>
    <string name="cloud_wlan_setting_summary">Turned off，auto sync on WiFi or mobile data</string>
    <string name="cloud_wlan_setting_title">Auto sync on WiFi only</string>
    <string name="cloudsync_auto_switch_tips">When cloud sync is turned on, photos are automatically synced to the cloud</string>
    <string name="cloudsync_switch_status_close">Automatic sync function is turned off</string>
    <string name="cloudsync_switch_status_notlogin">You are not logged in</string>
    <string name="color_border_clear">Clear</string>
    <string name="color_border_color">Color</string>
    <string name="color_border_corner_size">Corner Size</string>
    <string name="color_border_size">Thickness</string>
    <string name="color_pick_select">Choose custom color</string>
    <string name="color_pick_title">Select Color</string>
    <string name="compare_original">Compare</string>
    <string name="compile_fail">Failed to generate video</string>
    <string name="complete">OK</string>
    <string name="computer_dele_info">deleting information is being calculated</string>
    <string name="confirm">Confirm</string>
    <string name="continuous_shot_count">CS (%1d photos)</string>
    <string name="continuous_unable_to_privacy">连拍无法加入隐私相册</string>
    <string name="contrast">Contrast</string>
    <string name="copy_success">Success</string>
    <string name="crop">Crop</string>
    <string name="crop_label">Crop picture</string>
    <string name="crop_picture">Saving picture ....</string>
    <string name="crop_save">Save</string>
    <string name="crop_save_text">OK</string>
    <string name="crop_saved">Cropped image saved to %s.</string>
    <string name="crop_video">Saving video ....</string>
    <string name="filter_classic">Classic</string>
    <string name="filter_gourmet">Food</string>
    <string name="filter_movie">Movie</string>
    <string name="filter_portrait">Portrait</string>
    <string name="inputSubtitle">Please enter caption text</string>
    <string name="next_button_label">Next</string>
    <string name="save">Save</string>
    <string name="skip_button_label">Skip</string>
    <string name="trash_delete">Delete</string>
    <string name="trash_list_title">Photos and videos will show the number of days remaining before being deleted, and will be permanently deleted afterwards</string>
    <string name="trash_restore">Restore</string>
</resources>