<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_root" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="33.0dip" />
    <EditText android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="center|left|top" android:id="@id/user_input" android:background="#ffffffff" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="100.0dip" android:hint="@string/inputSubtitle" />
    <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="44.0dip">
        <RelativeLayout android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/ok" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/confirm" android:layout_weight="1.0" android:layout_centerInParent="true" />
        </RelativeLayout>
        <View android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <RelativeLayout android:background="#ffffffff" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/cancel" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>