<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@android:id/flagRequestShortcutWarningDialogSpokenFeedback" android:background="?android:windowBackground" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="@integer/preferences_left_pane_weight" style="@android:style/PreferenceActivity.Material">
            <zui.widget.ListViewX android:listPreferredItemHeight="48.0dip" android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@android:id/list" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0px" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent" android:divider="@null" android:layout_weight="1.0" android:category="normal" style="@style/PreferenceHeaderList.Zui" />
            <FrameLayout android:id="@android:id/insertion_handle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@android:id/off" android:visibility="gone" android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_weight="@integer/preferences_right_pane_weight" style="?preferencePanelStyle">
            <include layout="@android:layout/autofill_dataset_picker_header_footer" />
            <android.preference.PreferenceFrameLayout android:id="@android:id/numberpicker_input" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@android:id/autofill_save_yes" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@android:id/appop" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/back_button_label" android:layout_alignParentStart="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
            <Button android:id="@android:id/rtl" android:visibility="gone" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/skip_button_label" />
            <Button android:id="@android:id/maximize_window" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/next_button_label" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>