<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/default_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/trash_bar" android:layout_width="fill_parent" android:layout_height="@dimen/action_bar_area_height" layout="@layout/trash_action_bar" />
    <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:id="@id/trash_list_title" android:background="@color/default_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/trash_title_text_top" android:layout_marginRight="@dimen/action_bar_margin_right" android:layout_below="@id/trash_bar">
        <TextView android:textSize="@dimen/trash_title_text_size" android:textColor="@color/trash_list_title_text_color" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/trash_title_text_margin" android:text="@string/trash_list_title" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/trash_item_margin_left" android:layout_marginRight="@dimen/trash_item_margin_right" android:layout_above="@id/trash_list_layout" android:layout_below="@id/trash_list_title" />
    <LinearLayout android:orientation="vertical" android:id="@id/trash_list_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/trash_button_height" android:layout_alignParentBottom="true">
        <View android:background="#0d000000" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_alignParentTop="true" />
        <LinearLayout android:id="@id/button_layout" android:background="@color/trash_button_layout_color" android:paddingLeft="@dimen/trash_button_margin_left" android:paddingRight="@dimen/trash_button_margin_right" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:gravity="center" android:id="@id/recover" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/trash_restore" android:layout_weight="1.0" style="@style/TrashBottomButtonStyle" />
            <View android:background="@color/trash_button_line_color" android:layout_width="1.0dip" android:layout_height="@dimen/bottom_bar_height_horizontal" android:layout_centerHorizontal="true" />
            <Button android:gravity="center" android:id="@id/delete" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/trash_delete" android:layout_weight="1.0" style="@style/TrashBottomButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <include android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/trash_list_title" layout="@layout/trash_not_photo" />
</RelativeLayout>